[refactor & fix] Place 엔티티 수정, test 코드 오류 수정
- offdayList 추가를 위해 PlaceCloseTime VO를 추가하고, PlaceTime VO를 PlaceOpenTime으로 변경해서 구분지었습니다.
- PlaceServiceTest: 기존 place의 Id가 null로 지정되어있어 influencer 이름이 제대로 저장되지 않는 문제를 발견함
-- 조치완료

관련 이슈: #7